[gd_scene load_steps=3 format=2]

[ext_resource path="res://UI/DebugUI/FlagsPanel.gd" type="Script" id=1]
[ext_resource path="res://UI/DebugUI/FlagPanelEntry.tscn" type="PackedScene" id=2]

[node name="FlagsPanel" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ScrollContainer" type="ScrollContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
margin_right = 1280.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button" type="Button" parent="ScrollContainer/VBoxContainer"]
margin_right = 1280.0
margin_bottom = 20.0
text = "UPDATE"

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 1280.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="FlagPanelEntry" parent="ScrollContainer/VBoxContainer/VBoxContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1280.0
margin_bottom = 116.0

[node name="FlagPanelEntry2" parent="ScrollContainer/VBoxContainer/VBoxContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 120.0
margin_right = 1280.0
margin_bottom = 236.0

[node name="FlagPanelEntry3" parent="ScrollContainer/VBoxContainer/VBoxContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 240.0
margin_right = 1280.0
margin_bottom = 356.0

[connection signal="visibility_changed" from="." to="." method="_on_FlagsPanel_visibility_changed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/Button" to="." method="_on_Button_pressed"]
